
    WATO:
    * Removed IP-Address attribute from folders
    * Supporting localized tag titles
    * Using Username as default value for full names when editing users
    * Snapshot/Factory Reset is possible even with a broken config
    * Added error messages to user edit dialog to prevent notification problems
      caused by incomplete configuration
    * FIX: Fixed missing folders in "move to" dropdown fields
    * FIX: Fixed "move to target folders" after CSV import
    * FIX: Fixed problem with duplicate extra_buttons when using the i18n of multiisite
    * FIX: Fixed problem with duplicate permissions when using the i18n of multiisite
    * FIX: Writing single host_contactgroups rules for each selected
      contactgroup in host edit dialog
    * FIX: Fixed wrong folder contacgroup related permissions in auth.php api
    * FIX: Fixed not up-to-date role permission data in roles_saved hook

    BI:
    * improve doc/treasures/check_bi_local.py: local check that creates
      Nagios services out of BI aggregates

1.1.13i2:
    Core, Setup, etc.:
    * cmk -I: accept host tags and cluster names

    Checks & Agents:
    * linux agent - ipmi: Creating directory of cache file if not exists
    * dell_powerconnect_cpu: renamed service from CPU to "CPU utilization", in
      order to be consistent with other checks
    
    Multisite:
    * Several cleanups to prevent css/js warning messages in e.g. Firefox
    * Made texts in selectable rows selectable again
    * Adding reschedule icon to all Check_MK based services. Clicks on these
      icons will simply trigger a reschedule of the Check_MK service
    * FIX: ship missing CSS files for mobile GUI
    * FIX: rename check_mk.js into checkmk.js in order to avoid browser
      caching problems during version update

    WATO:
    * Optimized wraps in host lists tag column
    * Bulk inventory: Remove leading pipe signs in progress bar on main
      folder inventory