@@ -59,6 +59,9 @@
     * Snapshot/Factory Reset is possible even with a broken config
     * Added error messages to user edit dialog to prevent notification problems
       caused by incomplete configuration
+    * Replication: Can now handle replication sites which use the form based auth
+    * Replication: Added option to ignore problems with the ssl certificates
+                   used in ssl secured replications
     * FIX: Fixed missing folders in "move to" dropdown fields
     * FIX: Fixed "move to target folders" after CSV import
     * FIX: Fixed problem with duplicate extra_buttons when using the i18n of multiisite
